# ai-digest-bot

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: .lambdaignore  function.jsonnet
app/events/: test_event.json
app/src/: agent.py  config.py  handler.py  logging_config.py  migrate.py  slack_notifier.py  store.py
app/src/tools/: api_fetch.py  rss_fetch.py  slack_history.py  slack_post.py  web_scrape.py
app/tests/: conftest.py  test_agent.py  test_handler.py  test_logging_config.py  test_manage_sources.py  test_migrate.py  test_rss_fetch.py  test_slack_history.py  test_slack_notifier.py  test_slack_post.py  test_store.py  test_web_scrape.py
docs/: SOW-ai-digest-bot.md
docs/adr/: 0001-ideco-investment-advisor.md
scripts/: manage_feeds.py  manage_sources.py  seed_feeds.py
terraform/: .terraform.lock.hcl  .tflint.hcl  .trivyignore  dynamodb.tf  eventbridge.tf  lambda.tf  main.tf  outputs.tf  ssm.tf  variables.tf
